--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ fastapi==0.95.1
 h11==0.14.0
 idna==3.4
 pydantic==1.10.7
+PyJWT==2.7.0
 sniffio==1.3.0
 starlette==0.26.1
-typing_extensions==4.5.0
+typing-extensions==4.5.0
 uvicorn==0.22.0
