--- a/.gitignore
+++ b/.gitignore
@@ -247,4 +247,15 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+### Database ###
+*.accdb
+*.db
+*.dbf
+*.mdb
+*.pdb
+*.sqlite3
+*.sqlite
+*.db-shm
+*.db-wal
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,python
